# ADXL345_MOTION_DETECTION

zephyrtos_adxl345/: CMakeLists.txt  README.md  nrf52833dongle_nrf52833.overlay  nrf52840dk_nrf52840.overlay  prj.conf
zephyrtos_adxl345/src/app_libs/adxl345/: adxl345.c  adxl345.h
zephyrtos_adxl345/src/app_libs/gpio_settings/: gpio_settings.c  gpio_settings.h
zephyrtos_adxl345/src/app_libs/motion_detection/: adxl345_motion_example.c
zephyrtos_adxl345/src/app_libs/utils/: utils.h
